language/tests/error/TypeError06.sl
toeminto piä() {
  miäritteleToeminto(3);
}  
